fixing text-container overflow in index

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -321,6 +321,9 @@ section {
     padding-right: 20px;
     height: 70vh;
     padding: 20px 60px;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
 }
 
 .text-column h2 {
